# game-wizard-backend

./: Dockerfile  pyproject.toml
app/: main.py
app/core/: config.py  db.py
app/models/: __init__.py  agent.py  manual.py
app/routers/: agents.py  chat.py
app/utils/: crud.py  llm.py  qdrant.py  storage.py
