[project]
name = "game-wizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.3",
    "confluent-kafka>=2.10.0",
    "fastapi[standard]>=0.115.12",
    "kafka-python>=2.1.5",
    "langchain>=0.3.24",
    "langchain-core>=0.3.56",
    "langchain-nvidia-ai-endpoints>=0.3.9",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
    "sqlmodel>=0.0.24",
    "unicorn>=2.1.3",
]
